[package]
name = "bytely"
version = "0.1.0"
edition = "2024"
authors = ["Fabio Ueno"]
description = "A URL shortener service built with Rust"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
